# genoasm

./: Cargo.toml  README.md
src/: animal.rs  corrupt.rs  ecosystem.rs  main.rs  similarity.rs  util.rs  vm.rs
src/animal/: genoasm.rs
