[package]
name = "genoasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.5"
color-eyre = "0.6.2"
hound = "3.5.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
symphonia = "0.5.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
