[package]
name = "genoasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.26.1"
flate2 = "1.0.26"
hound = "3.5.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
realfft = "3.3.0"
rustfft = "6.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tui = { version = "0.19.0" }
